designSytem styling completed

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Design Agency</title>
+    <link rel="icon" href="./Assets/images/Logo/LogoWhite.svg" />
+    <link rel="stylesheet" href="./Assets/style/designSystem.css" />
     <link rel="stylesheet" href="./Assets/style/index.css" />
+    <title>Small Startup - Home</title>
   </head>
   <body>
-    hello
+    <div class="hero">
+      <div class="navbar">
+        <div class="navbar__logo">
+          <img src="./Assets/images/Logo/LogoWhite.svg" alt="" />
+        </div>
+        <div class="navbar__menu">
+          <a href="#" class="navbar__menu1">Home</a
+          ><a href="#" class="navbar__menu2">Portfolio</a
+          ><a href="#" class="navbar__menu3">Services</a
+          ><a href="#" class="navbar__menu4">Contact</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
