--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   </head>
   <body>
     <div class="hero">
-      <div class="navbar">
+      <div class="navbar container">
         <div class="navbar__logo">
           <img src="./Assets/images/Logo/LogoWhite.svg" alt="" />
+          <div class="title">Start</div>
         </div>
         <div class="navbar__menu">
           <a href="#" class="navbar__menu1">Home</a
           ><a href="#" class="navbar__menu2">Portfolio</a
           ><a href="#" class="navbar__menu3">Services</a
           ><a href="#" class="navbar__menu4">Contact</a>
+        </div>
+        <div class="navbar__icon">
+          <i class="bi bi-list"></i>
+          <i class="bi bi-x"></i>
         </div>
       </div>
     </div>
