--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./Assets/images/Logo/LogoWhite.svg" />
     <link rel="stylesheet" href="./Assets/style/designSystem.css" />
     <link rel="stylesheet" href="./Assets/style/index.css" />
+    <script src="./Assets/main.js" defer></script>
     <title>Small Startup - Home</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
         </div>
         <div class="navbar__icon">
           <i class="bi bi-list"></i>
-          <i class="bi bi-x"></i>
+          <i class="bi bi-x hide"></i>
         </div>
       </div>
     </div>
