--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="hero">
       <div class="navbar container">
-        <div class="navbar__logo">
+        <div class="navbar__logo hidden">
           <img src="./Assets/images/Logo/LogoWhite.svg" alt="" />
           <div class="title">Start</div>
         </div>
@@ -25,6 +25,22 @@
         <div class="navbar__icon">
           <i class="bi bi-list"></i>
           <i class="bi bi-x hide"></i>
+        </div>
+      </div>
+      <div class="sectionOne grid container">
+        <div class="sectionOne__left">
+          <div class="sectionOne__label label text-white">Welcome</div>
+          <div class="sectionOne__title">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </div>
+          <div class="sectionOne__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus
+            sit laborum praesentium consect
+          </div>
+          <button class="sectionOne__left__btn">Explore</button>
+        </div>
+        <div class="sectionOne__right">
+          <img src="./Assets/images/Home/image-1.svg" alt="" />
         </div>
       </div>
     </div>
