--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="sectionOne grid container">
         <div class="sectionOne__left">
           <div class="sectionOne__label label text-white">Welcome</div>
-          <div class="sectionOne__title">
+          <div class="sectionOne__title .common--title text-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </div>
           <div class="sectionOne__text">
